syntax = "proto3";
option java_multiple_files = true;
option go_package = "github.com/somnath67643/aurora-sizing/clientgo/baseproto";
package org.anonymous.grpc;

import "cmd_type.proto";
import "get_type.proto";

message CmdLookupByName {
	int32 message_size = 1;
	CmdType message_type = 2;
	GetType get_type = 3;
	int32 count = 4;
	string security_name_prefix = 5;
}

message CmdLookupByNameResponse {
	int32 message_size = 1;
	int32 security_count = 2;
	repeated string security_names = 3;
}

message CmdLookupByNameResponseStream {
	string security_names = 1;
}
