syntax = "proto3";
package sec_srv_svc;

import "srv_message_type.proto";

message SrvMsgTransGetHead {
	uint32 message_size = 1;
	MessageType message_type = 2;
	int32 transaction_id = 3;
	int32 header_count = 4;
}

message SrvMsgTransGetHeaderResponse {
	uint32 message_size = 1;
	int32 header_count = 2;
	int32 encoded_part_number = 3;
	int32 txn_part_count = 4;
	int32 txn_part_byte_count = 5;
	int32 security_type = 6;
	int32 txn_trans_type = 7;
	int32 database_id = 8;
	int32 gmt_time = 9;
	string app_name = 10;
	string user_name = 11;
	string security_name = 12;
	int32 source_txn_id = 13;
	int32 network_address = 14;
	uint32 txn_flags_for_client = 15;
}
